--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>writingsystem</title>
+    <title>Isiko Script</title>
+
+    <meta name="author" content="Osmond Tshuma">
+    <meta name="keywords" content="Writing system, Isiko script, Africa writing system, Zimbabwe writing system, Graphic design">
+    <meta name="description" content="Isiko script writing system">
+    <meta property="og:url" content="https://www.isikoscript.com/">
+    <meta name="og:title" property="og:title" content="Isiko Script">
+    <meta property="og:description" content="An effort to design a writing system inspired by the daily life of the Northern Ndebele people.">
+    <meta property="og: image" content="./isiko.png">
+    <link rel="icon" type="png" href="./isikofavicon.png"></link>
+
     <script>
         tailwind.config = {
           theme: {
@@ -101,9 +111,9 @@
             color: antiquewhite;
             padding-left: 100px;
             padding-right: 100px;
-            padding-top: 100px;
-            padding-bottom: 25px;
-          font-size: 10vw;
+            padding-top: 25px;
+            padding-bottom: 50px;
+            font-size: 10vw;
             line-height: 1em;
         }
 
@@ -745,6 +755,7 @@ to {
     </div>
 
     <div><h2>Designed by <strong>OSMOND TSHUMA</strong>. Rhode Island Schoold of Design (RISD).</h2></div>
+    
 
 
 
