--- a/index.html
+++ b/index.html
@@ -545,6 +545,53 @@ to {
         }
         }
 
+        /* Adjust padding for screens smaller than 800px */
+        @media (max-width: 800px) {
+            .flex-container, .flex-parent1 {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+
+        h1 {
+            padding-left: 20px;
+            padding-right: 20px;
+            font-size: 8vw; /* Adjust font size for smaller screens */
+        }
+
+        h2 {
+            padding-left: 10px;
+            padding-right: 10px;
+            font-size: 14px; /* Adjust font size */
+        }
+
+        img {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+        }
+
+        /* Adjust padding for very small screens (e.g., phones) */
+        @media (max-width: 480px) {
+            .flex-container, .flex-parent1 {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
+        h1 {
+            font-size: 6vw; /* Further reduce font size */
+        }
+
+        h2 {
+            font-size: 12px;
+        }
+
+        img {
+            padding-left: 5px;
+            padding-right: 5px;
+        }
+        }
+
+
     </style>
 </head>
 
