Update font sizes

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ to {
             opacity: 1;
         }
 
-        /* j containier */
+        /* l containier */
         #l-container {
             position: relative;
         }
@@ -545,17 +545,21 @@ to {
         }
         }
 
-        /* Adjust padding for screens smaller than 800px */
+        /* Adjusting padding for screens smaller than 800px */
         @media (max-width: 800px) {
             .flex-container, .flex-parent1 {
             padding-left: 20px;
             padding-right: 20px;
         }
 
+        p {
+            font-size: 20px;
+        }
+
         h1 {
             padding-left: 20px;
             padding-right: 20px;
-            font-size: 8vw; /* Adjust font size for smaller screens */
+            font-size: 8vw; 
         }
 
         h2 {
@@ -567,14 +571,20 @@ to {
         img {
             padding-left: 10px;
             padding-right: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
         }
 
-        /* Adjust padding for very small screens (e.g., phones) */
+        /* Adjusting padding for very small screens (e.g., phones) */
         @media (max-width: 480px) {
             .flex-container, .flex-parent1 {
             padding-left: 10px;
             padding-right: 10px;
+        }
+
+        p {
+            font-size: 15px;
         }
 
         h1 {
@@ -588,6 +598,8 @@ to {
         img {
             padding-left: 5px;
             padding-right: 5px;
+            padding-top: 5px;
+            padding-bottom: 5px;
         }
         }
 
@@ -609,7 +621,7 @@ to {
         <div><p><strong>Background</strong><br>I was not raised in Matabeleland, the region where Northern Ndebele is predominantly spoken in Zimbabwe. Instead, I grew up and attended school in Harare, located in Mashonaland, where Shona languages are spoken. When my family relocated from Bulawayo (Matabeleland) to Harare (Mashonaland), I had to adapt and learn this new linguistic environment. As a result, I primarily learnt English and chiKaranga (a Shona language) and only spoke Northern Ndebele within the confines of my home.<br><br>Reflecting on my educational journey, I realize that all my formal learning has been conducted in English. Through ISIKO script, I am not only reimagining a writing system but also reclaiming my identity as a person of Northern Ndebele heritage.<br><br>This project is both deeply personal and a broader statement on cultural preservation and self-determination.</p></div>
     </div>
 
-   
+   <br>
 
 
     <div class="flex-parent1">
