--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             letter-spacing: 0.5px;
             padding-left: 50px;
             padding-right: 50px;
-            padding-top: 50px;
+            padding-top: 0px;
             padding-bottom: 50px;
         }
 
@@ -566,6 +566,7 @@ to {
             padding-left: 10px;
             padding-right: 10px;
             font-size: 14px; /* Adjust font size */
+            padding-bottom: 10px;
         }
 
         img {
@@ -737,7 +738,7 @@ to {
                 <img src="Headband2.jpg" id="q-photo">
                 <img src="q.svg" id="q-letter">
             </div>
-            <h2>Latin Equivalent  [ <strong>Q</strong> ]<br><br><strong>UMQHELE</strong>, is a traditional circular headband made of fur  worn by Zulu or Northern Ndebele men.</h2>
+            <h2>Latin Equivalent  [ <strong>Q</strong> ]<br><br><strong>UMQHELE</strong>, is a traditional circular headband made of fur worn by Zulu or Northern Ndebele men. It is made from animal skin, usually, cow tail.</h2>
         </div>
         
 
@@ -755,7 +756,7 @@ to {
                 <img src="kraal2.jpg" id="s-photo">
                 <img src="s.svg" id="s-letter">
             </div>
-            <h2>Latin Equivalent  [ <strong>S</strong> ]<br><br><strong>ISIBAYA</strong> (kraal), cattle is a symbolic and material importance, there is an expression “umnumzane ubonakala ngesibaya sakhe” (the man's social status is seen by the size of his kraal).</h2>
+            <h2>Latin Equivalent  [ <strong>S</strong> ]<br><br><strong>ISIBAYA</strong> (kraal), cattle is a symbolic and material importance, the man's social status is seen by the size of his kraal.</h2>
         </div>
 
         <div class="flex-child1">
@@ -763,7 +764,7 @@ to {
                 <img src="divination2.jpg" id="t-photo">
                 <img src="t.svg" id="t-letter">
             </div>
-            <h2>Latin Equivalent  [ <strong>T</strong> ]<br><br><strong>AMATHAMBO</strong> (divination bones) are used by traditional healers to assist communities socially and politically, healing physical, emotional, and spiritual illnesses, counteracting witchcraft and narrating the history.</h2>
+            <h2>Latin Equivalent  [ <strong>T</strong> ]<br><br><strong>AMATHAMBO</strong> (divination bones) are used by traditional healers to assist communities socially, politically and healing.</h2>
         </div>
 
        
